Fix: Alguns ajustes
