# src/docs/swagger_output.json
@@ -3,91 +3,13 @@
   "info": {
     "version": "1.0.0",
     "title": "REST API",
-    "description": "e-commerce desenvolvido para a aceleração DevForTech da GamaAcademy"
+    "description": "Aplicativo de e-commerce desenvolvido como projeto final para a aceleração DevForTech da Gama Academy, turma 3 de Nodejs"
   },
   "host": "localhost:3333",
   "basePath": "/",
   "schemes": [
-    "http"
   ],
   "paths": {
-    "/sobre": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/entrar": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/cadastro": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/contato-pagina": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/pagamento": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/produto-pagina": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/cadastro-produto": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/cadastro-pedido": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/pedidos-pagina": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/clientes-pagina": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/confirmacao-pedido": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
     "/": {
       "get": {
         "description": "",
@@ -174,6 +96,83 @@
             }
           }
         ],
+        "responses": {}
+      }
+    },
+    "/sobre": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/entrar": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/cadastro": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/contato-pagina": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/pagamento": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/produto-pagina": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/cadastro-produto": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/cadastro-pedido": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/pedidos-pagina": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/clientes-pagina": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/confirmacao-pedido": {
+      "get": {
+        "description": "",
+        "parameters": [],
         "responses": {}
       }
     },
